Fix hover on mobile

--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -24,7 +24,13 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 
-  &:hover {
+  &:active {
+    color: var(--accent);
+  }
+}
+
+@media (hover: hover) and (pointer: fine) {
+  .links > li > *:hover {
     color: var(--accent);
   }
 }
